<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="https://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="hello">Hello World, DrypersActivity!</string>
    <string name="app_name">Baby Babble</string>
    <string name="loader">Loading</string>
    <string name="app_id">280038485452137</string>
    <string name="hint_username">Username</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_loc">Location</string>
    <string name="hint_sex">Gender</string>
    <string name="hint_email">Email</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="user_image">User Image</string>
    <string name="babble_btn">Start Singing</string>

    <item name="gallery_req" format="integer" type="integer">1</item>

    <string name="choose_photo_btn">Choose a Photo</string>
    <string name="take_photo_btn">Take Photo</string>

    <item name="capture_req" format="integer" type="integer">2</item>

    <string name="start_recording">Start Recording</string>
    <string name="ok_button_label">OK</string>
    <string name="title_activity_babble_create">BabbleCreate</string>
    <string name="action_settings">Settings</string>
    
    <string name="profile_title">Profile</string>
    <string name="profile_name">Name :</string>
    <string name="profile_email">Email :</string>
    <string name="profile_dob">Date of Birth :</string>
    <string name="profile_password">Password :</string>
    <string name="profile_address">Home Address :</string>
    <string name="profile_postcode">Postcode :</string>
    <string name="profile_state">State :</string>
    <string name="profile_notify">Notify me when :</string>
    <string name="profile_featured">My Babble is featured</string>
    <string name="profile_friendupdate">My friends upload new Babbles</string>
    <string name="profile_picturedesc">Your profile picture</string>
    <string name="profile_country">Country :</string>
    
    <string name="gender_title">Gender Selection</string>
    
    <string name="login_email">Enter your email \u0026 password.</string>
    <string name="login_email_invalid">Ooops.. Invalid login. Try again!</string>
    <string name="login_email_label">user@domain.com</string>
    <string name="login_password_label">password</string>
    <string name="login_msg">Welcome to Baby Babble~!</string>
    
    <string name="recoding_keepsinging">Keep Singing!</string>
    <string name="recoding_songtitle">Song Title..</string>
    
    <string name="babblebox_title">Babblebox</string>
    
    <string name="redemption_title">Redemption</string>
    <string name="redemption_earned_info1">( Total Points Earned : %1$d )</string>
    <string name="redemption_earned_info2">Share it to earn more points!</string>
    <string name="redemption_main_dummyvalue">500000000</string>
    <string name="redemption_main_info1">Use your points to redeem gifts!</string>
    <string name="redemption_main_info2">Total Points : </string>
    <string name="redemption_view_pointslbl"> Points</string>
    <string name="redemption_view_product_txt">You\'ve chosen to redeem a baby girl? &lt;br /&gt;It comes in various sizes including XS, S, M, L, XL.</string>
    <string name="redemption_mygift_info1">Redemption is being processed.</string>
    <string name="redemption_mygift_info2">Stay tuned!</string>
    <string name="headshotexplanation">HeadshotExplanation</string>
    <string name="babbler_name">Babbler Name</string>
    <string name="_10">10</string>
    <string name="play">play</string>
    <string name="babbleimage">babbleImage</string>
    <string name="shake_it_n_love_it">Shake it N Love it</string>
    <string name="keep_singing_">Keep Singing!</string>
    <string name="genderprompt">genderPrompt</string>
    <string name="genderheadshot">genderHeadshot</string>
    <string name="_3_july_1985">3 July 1985</string>
    <string name="my_new_babble">My new babble</string>
    <string name="progress">progress</string>
    <string name="song_name">Song Name</string>
    <string name="_0">0</string>
    <string name="gift_name_">Gift name..</string>
    <string name="loading_logo">loading_logo</string>
    <string name="loading_spinner">loading_spinner</string>
    <string name="loading_text">loading_text</string>
    <string name="recording_paused">Recording Paused</string>
    
    
    
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_learning">LearningActivity</string>

</resources>