<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/babble_container"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loadingbg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/babblebox_menubar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/top_bar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_babblebox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/abtn_back"
            android:gravity="left" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/profile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <Button
            android:id="@+id/menu_babblebox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@drawable/abtn_menu_selector"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group1"
        android:layout_width="310dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imageView_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:background="#FFFFFF"
                android:contentDescription="@string/profile_picturedesc"
                android:src="@android:drawable/sym_def_app_icon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="bottom|center|right"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_changepic"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/changeprofile_selector"
                    android:gravity="right" />

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editprofile_selector"
                    android:gravity="right" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/lbl_name"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/profile_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_email"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/profile_email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lbl_dob"
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile_dob"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txt_dob"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:editable="false"
                android:freezesText="true"
                android:textIsSelectable="false"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/lbl_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:text="@string/profile_address"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txt_address"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="4"
                android:scrollHorizontally="false"
                android:singleLine="false"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/lbl_postcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_postcode"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txt_postcode"
                android:layout_width="110dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/lbl_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/profile_state"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txt_state"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:textSize="12sp" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lbl_country"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profile_country"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/txt_country"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" >

            <TextView
                android:id="@+id/lbl_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_notify"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible" >

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/profile_featured" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:text="@string/profile_friendupdate" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>