<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout02"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loadingbg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/babblebox_menubar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/top_bar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_babblebox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/abtn_back"
            android:gravity="left" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_inner"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="200dp"
            android:layout_height="166dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/user_image"
            android:scaleType="centerInside" >

        </ImageView>

        <Button
            android:id="@+id/btn_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/fb_login" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/login_email_label" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/lbl_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/login_email" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/login_password_label" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/submit_selector" >

        </Button>
    </LinearLayout>

</LinearLayout>