<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout02"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loadingbg"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/babblebox_menubar"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/top_bar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_babblebox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/abtn_back"
            android:gravity="left" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_inner"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="216dp"
            android:layout_height="167dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:src="@drawable/logo"
            android:contentDescription="@string/user_image"
            android:scaleType="fitCenter" >

        </ImageView>

        <Button
            android:id="@+id/btn_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/fb_reg" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/login_email_label" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/lbl_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_email"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/login_password_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <CheckBox
                android:id="@+id/checkBox_tnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="I agree to the "
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_tnc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Terms and Conditions"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0000FF"
                android:textSize="12sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/submit_selector" >
        </Button>
    </LinearLayout>

</LinearLayout>